# habitat

components/common/src/: lib.rs
components/core/src/crypto/: mod.rs
components/core/src/crypto/keys/: sig_key_pair.rs
components/depot-client/src/: lib.rs
components/depot-core/: Cargo.toml  build.rs
components/depot-core/protocols/: origin.proto  user.proto
components/depot-core/src/: lib.rs
components/depot-core/src/message/: mod.rs  origin.rs  user.rs
components/depot/doc/: api.raml
components/depot/src/: data_store.rs  error.rs  lib.rs  server.rs
components/depot/src/tables/: mod.rs  origin_keys.rs  origins.rs  packages.rs  views.rs
components/director/src/: controller.rs
components/hab/src/: cli.rs  exec.rs  main.rs
components/hab/src/command/: artifact.rs  origin.rs
components/studio/: plan.sh
components/sup/: Cargo.toml
components/sup/src/: config.rs  error.rs  lib.rs  main.rs  output.rs  supervisor.rs
components/sup/src/command/: configure.rs  start.rs
plans/b2sum/: plan.sh
plans/mongodb/: plan.sh
plans/openssl/: plan.sh
plans/openssl-fips/: plan.sh
plans/ruby/: plan.sh
plans/scons/: plan.sh
www/source/docs/: contribute-help-build.html.md
