[package]
name = "habitat_depot_core"
version = "0.5.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
build = "build.rs"

[dependencies]
bitflags = "*"
hyper = "*"
protobuf = "*"
redis = "*"
rustc-serialize = "*"

[dependencies.habitat_core]
path = "../core"

[features]
protocols = []

[build-dependencies]
pkg-config = "0.3"
